libty/ty-ipv6.h

#define ICMP6_TOOBIG               2
#define ICMP6_MLD_REPORT           131
#define ICMP6_ROUTERSOL            133
#define ICMP6_ROUTERADV            134
#define ICMP6_NEIGHBORSOL          135
#define ICMP6_NEIGHBORADV          136
#define PREFER_LINK   32
#define PREFER_GLOBAL  0
#define NXT_HBH               0
#define NXT_FRAG             44
#define NXT_DST              60
#define NXT_ICMP6            58
#define NXT_UDP              17
/* ── Global state ────────────────────────────────────────────────────────── */
extern int debug;
extern int _thc_ipv6_showerrors;
extern int do_hdr_size;
TY_NODISCARD
extern pcap_t *thc_pcap_init(char *interface, char *capture);
extern void  thc_ipv6_rawmode(int mode);
extern int   thc_pcap_check(pcap_t *p, char *function, char *opt);
extern char *thc_pcap_close(pcap_t *p);
/* address / interface helpers */
extern int thc_parse_mac(const char *text, unsigned char *mac);
TY_NODISCARD
extern unsigned char *thc_resolve6(char *target);
TY_NODISCARD
extern unsigned char *thc_get_own_mac(char *interface);
extern int            thc_get_mtu(char *interface);
TY_NODISCARD
extern unsigned char *thc_get_own_ipv6(char *interface, unsigned char *dst,
                                        int prefer);
TY_NODISCARD
extern unsigned char *thc_get_multicast_mac(unsigned char *dst);
TY_NODISCARD
extern unsigned char *thc_get_mac(char *interface, unsigned char *src,
                                   unsigned char *dst);
extern int thc_ping26(char *interface, unsigned char *srcmac,
                      unsigned char *dstmac, unsigned char *src,
                      unsigned char *dst, int size, int count);
extern int thc_routeradv6(char *interface, unsigned char *src,
                           unsigned char *dst, unsigned char *srcmac,
                           unsigned char default_ttl, int managed,
                           unsigned char *prefix, int prefixlen,
                           int mtu, unsigned int lifetime);
extern int thc_send_as_fragment6(char *interface, unsigned char *src,
                                  unsigned char *dst, unsigned char type,
                                  unsigned char *data, int data_len,
                                  int frag_len);
extern int thc_send_raguard_bypass6(char *interface, unsigned char *src,
                                     unsigned char *dst, unsigned char *srcmac,
                                     unsigned char *dstmac, unsigned char type,
                                     unsigned char *data, int data_len, int mtu);
TY_NODISCARD
extern unsigned char *thc_create_ipv6_extended(char *interface, int prefer,
                                                int *pkt_len,
                                                unsigned char *src,
                                                unsigned char *dst,
                                                int ttl, int length,
                                                int label, int class,
                                                int version);
extern int thc_add_hdr_oneshotfragment(unsigned char *pkt, int *pkt_len,
                                        unsigned int id);
extern int thc_add_hdr_dst(unsigned char *pkt, int *pkt_len,
                            unsigned char *buf, int buflen);
extern int thc_add_hdr_hopbyhop(unsigned char *pkt, int *pkt_len,
                                  unsigned char *buf, int buflen);
extern int thc_add_icmp6(unsigned char *pkt, int *pkt_len,
                          int type, int code, unsigned int flags,
                          unsigned char *data, int data_len, int checksum);
extern int thc_add_udp(unsigned char *pkt, int *pkt_len,
                        uint16_t sport, uint16_t dport,
                        unsigned int checksum, char *data, int data_len);
/* packet send / generate */
extern int thc_generate_and_send_pkt(char *interface, unsigned char *srcmac,
                                      unsigned char *dstmac,
                                      unsigned char *pkt, int *pkt_len);
extern int thc_generate_pkt(char *interface, unsigned char *srcmac,
                             unsigned char *dstmac,
                             unsigned char *pkt, int *pkt_len);
extern int thc_send_pkt(char *interface, unsigned char *pkt, int *pkt_len);
TY_NODISCARD
extern unsigned char *thc_destroy_packet(unsigned char *pkt);
extern int   checksum_pseudo_header(unsigned char *src, unsigned char *dst,
                                     unsigned char type, unsigned char *data,
                                     int length);
TY_NODISCARD
extern unsigned char *thc_ipv62notation(unsigned char *string);